--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id = "intro">
         <p><b>
-            Currently Independent Researcher, MEV Searcher & Consultant; 
+            Currently Independent Researcher, MEV Searcher & Consultant
             <br> Protocol Fellow at RIG (Robust Incentives Group) in
             <a href="https://ethereum.github.io/rig/">Ethereum Foundation</a>
             <br>previously: Faradai, EBRD & Cambridge.
@@ -52,7 +52,7 @@
             Holds MSc in CS at NTNU
             <a href="https://www.ntnu.edu/paasforchain">Blockchain Lab</a> and BSc in Financial Engineering.
         <li>
-            All of my experiences and <a href="https://erayack.notion.site/erayack/Eray-s-portfolio-946c8628289c4c5d9fd3748145deebe7">portfolio</a>
+            My <a href="https://erayack.notion.site/erayack/Eray-s-portfolio-946c8628289c4c5d9fd3748145deebe7">portfolio</a> and <a href="eray (1).pdf">CV</a>
         </li>
         </ul>
 
