--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@
         <div id = "reports">
             <h2>Reports</h2>
 
-            I am a big proponent of writing software in the
-            <ahref="https://www.rust-lang.org/">Rust programming language</a> for
-            safety, performance and portability:
+            I write comprehensive reports for my clients and share some of them.
         
 
             <div>
@@ -128,12 +126,8 @@
 
         <div id = "tutorial">
             <h2>Tutorials</h2>
-
-            I am a big proponent of writing software in the
-            <ahref="https://www.rust-lang.org/">Rust programming language</a> for
-            safety, performance and portability:
+            I specialize in creating comprehensive code tutorials and walkthroughs that are designed to help both novice and experienced developers improve their skills.
         
-
             <div>
                 <ul>
                     <li>
