--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <h1 class="subtitle">
         contact me on
-        <a href="https://twitter.com/erayack">twitter</a>,
+        <a href="https://twitter.com/erayajk">twitter</a>,
         <a href="https://github.com/erayack">github</a> or via
         <a href="mailto:erayackgoz@hotmail.com">email</a>
       </h1>
@@ -29,10 +29,7 @@
 
     <div id = "intro">
         <p><b>
-            Currently Independent Researcher, MEV Searcher & Consultant
-            <br> Protocol Fellow at RIG (Robust Incentives Group) in
-            <a href="https://ethereum.github.io/rig/">Ethereum Foundation</a>
-            <br>previously: Faradai, EBRD & Cambridge.
+            I am currently working as an independent researcher, MEV searcher, and consultant. Additionally, I am a Protocol Fellow at RIG (Robust Incentives Group) in the Foundation. Prior to my current roles, I have worked with Faradai, EBRD, and Cambridge.
         </p></b>
 
         <ul>
@@ -52,7 +49,7 @@
             Holds MSc in CS at NTNU
             <a href="https://www.ntnu.edu/paasforchain">Blockchain Lab</a> and BSc in Financial Engineering.
         <li>
-            My <a href="https://erayack.notion.site/erayack/Eray-s-portfolio-946c8628289c4c5d9fd3748145deebe7">portfolio</a> and <a href="eray (1).pdf">CV</a>
+            My <a href="eray (1).pdf">CV</a> and <a href="https://erayack.notion.site/erayack/Eray-s-portfolio-946c8628289c4c5d9fd3748145deebe7">portfolio</a>.
         </li>
         </ul>
 
@@ -147,9 +144,12 @@
         <div id = "video-games">
             <h2>Book Contributions</h2>
             <ul>
-                <li><i><a href = "https://www.dota2.com/">Dota / Dota2</a></i>: Over 5k hours, 4.8k MMR, Invoker Main</li>
-                <li><i><a href = "https://leagueoflegends.com/">League of Legends</a></i>: Diamond 2 Jungle / Support main</li>
-                <li><i><a href = "https://worldofwarcraft.com/">World of Warcraft</a></i>: 1.8k 2v2 / 3v3 Combat Rogue</li>
+
+                <li>
+                    <a href="https://books.google.com.tr/books?id=bN6dEAAAQBAJ&pg=PA99&source=gbs_toc_r&cad=3#v=onepage&q&f=false">
+                        <i>Blockchain-Based Energy Management for Supply Chains</i>
+                    </a>
+                </li>  
             </ul>
         </div>
     </div>
