--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id = "intro">
         <p><b>
-            I am currently working as an independent researcher, MEV searcher, and consultant. Additionally, I am a Protocol Fellow at RIG (Robust Incentives Group) in the Foundation. Prior to my current roles, I have worked with Faradai, EBRD, and Cambridge.
+            I am currently working as an independent researcher, MEV searcher, and consultant. Additionally, I am a Protocol Fellow at RIG (Robust Incentives Group) in the Ethereum Foundation. Prior to my current roles, I have worked with Faradai, EBRD, and Cambridge.
         </p></b>
 
         <ul>
