--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
     <div id = "intro">
         <p><b>
-            I am currently working as an independent researcher, MEV searcher, and consultant. Additionally, I am a Protocol Fellow at RIG (Robust Incentives Group) in the Ethereum Foundation. Prior to my current roles, I have worked with Faradai, EBRD, and Cambridge.
+            I am currently working as an independent researcher, MEV searcher, and consultant. Additionally, I am a Protocol Fellow at RIG (Robust Incentives Group) in the Ethereum Foundation. Prior to my current roles, I have worked at Faradai, EBRD and Cambridge.
         </p></b>
 
         <ul>
         <li>
-            My research interests are Cryptoeconomic Security,
-            MEV, Zero Knowledge Proofs.
+            My research interests are Mechanism design, Cryptoeconomic Security,
+            MEV, Proof of Stake, Zero Knowledge and SGX.
         </li>
 
         <li>
@@ -63,8 +63,7 @@
         <div id = "writing">
             <h2>Selected Writing / Research</h2>
 
-            I occasionally write about the topics which interest me the most in
-            crypto:
+            I write about the crypto topics that pique my interest the most.
 
             <div>
                 <ul>
@@ -73,6 +72,13 @@
                            ><i>Understanding the Technical Aspects of Aztec 3 and Noir<i></a
                        >,:
                        I wrote about recent developments and future plans for Aztec and Noir.
+                    </li>
+                    <li>
+                        <a href="https://hackmd.io/@erayack/BJhNZ_l_h"
+                           ><i>SGX & TEE in Blockchain<i></a
+                       >,:
+                       TEEs and Intel SGX have multiple use cases in blockchain tech, including secure smart contract execution, confidential transactions, privacy-preserving data analytics, secure oracles, decentralized identity systems, and more. 
+                       They protect sensitive data, ensure privacy and confidentiality, and enable secure authentication on the blockchain..
                     </li>
                     <li>
                         <a href="https://mirror.xyz/0x14A74292E6399987cA02E40d323603B3F257D8a6/YhMqR1TBbdInJ23t_kaKGUDn_IX5jMjtFNnYa7XrUGQ"
@@ -91,7 +97,7 @@
                          </i></a 
                        >
                         with Dr. Sinan Kufeoglu and Prof. Dr. Aaron Praktiknjo.
-                       This paper attempts to design the first decentralised energy Datahub ecosystem’s business ecosystem, with the name DenHub, using Blockchain technology. 
+                       This paper attempts to design the first decentralised energy Datahub ecosystem’s business ecosystem, with the name DenHub, using Blockchain. 
                        This model enables easy access to transparent and flexible energy data and new business models that will emerge upon its use.
                     </li>
 
@@ -123,6 +129,7 @@
 
         <div id = "tutorial">
             <h2>Tutorials</h2>
+             
             I specialize in creating comprehensive code tutorials and walkthroughs that are designed to help both novice and experienced developers improve their skills.
         
             <div>
@@ -141,7 +148,7 @@
             </div>
         </div>
 
-        <div id = "video-games">
+        <div id = "book">
             <h2>Book Contributions</h2>
             <ul>
 
@@ -150,6 +157,28 @@
                         <i>Blockchain-Based Energy Management for Supply Chains</i>
                     </a>
                 </li>  
+            </ul>
+        </div>
+
+        <div id = "thread">
+            <h2>Twitter Threads</h2>
+            <ul>
+
+                <li>
+                    <a href="https://twitter.com/erayajk/status/1660977098092101634">
+                        <i>MEV Burn</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/erayajk/status/1668385787191107584">
+                        <i>Flashbots' SGX Builder</i>
+                    </a>
+                </li>  
+                <li>
+                    <a href="https://twitter.com/erayajk/status/1667120268504883202">
+                        <i>EIP-4788: Beacon block root in the EVM</i>
+                    </a>
+                </li> 
             </ul>
         </div>
     </div>
