--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h1 class="subtitle">
         contact me on
         <a href="https://twitter.com/erayajk">twitter</a>,
+        <a href="https://www.linkedin.com/in/erayack/">linkedin</a>,
         <a href="https://github.com/erayack">github</a> or via
         <a href="mailto:erayackgoz@hotmail.com">email</a>
       </h1>
@@ -115,7 +116,7 @@
                 <ul>
                     <li>
                         <a href="https://docs.google.com/document/d/1RdXXOgxmt6G3krUVZZN566FIbiOY3ht64XV-eSnmaCE/edit?usp=sharing">
-                            <i>Aave v4 Report</i>
+                            <i>Aave v3 Report</i>
                         </a>
                         : Extensive report for Aave v4.
                     </li>                    
@@ -171,12 +172,17 @@
                 </li>
                 <li>
                     <a href="https://twitter.com/erayajk/status/1668385787191107584">
-                        <i>Flashbots' SGX Builder</i>
+                        <i>The Sting Framework and Flashbots' SGX Builder</i>
                     </a>
                 </li>  
                 <li>
                     <a href="https://twitter.com/erayajk/status/1667120268504883202">
                         <i>EIP-4788: Beacon block root in the EVM</i>
+                    </a>
+                </li> 
+                <li>
+                    <a href="https://twitter.com/erayajk/status/1659531392915496963">
+                        <i>Aztec and Noir</i>
                     </a>
                 </li> 
             </ul>
