--- a/index.html
+++ b/index.html
@@ -69,8 +69,15 @@
             <div>
                 <ul>
                     <li>
+                        <a href=""
+                           ><i>Using SNARKs for Auction Design in DAO Treasuries<i></a
+                       >,:
+                       
+                        The article discusses transparency challenges in DAO treasuries and proposes solutions using SNARKs to enhance privacy and efficiency.
+                    </li>
+                    <li>
                         <a href="https://hackmd.io/XZX9_pZ8Q1aa_ySDPeQopg"
-                           ><i>Understanding the Technical Aspects of Aztec 3 and Noir<i></a
+                           ><i>Understanding the Technical Aspects of Aztec and Noir<i></a
                        >,:
                        I wrote about recent developments and future plans for Aztec and Noir.
                     </li>
@@ -79,7 +86,7 @@
                            ><i>SGX & TEE in Blockchain<i></a
                        >,:
                        TEEs and Intel SGX have multiple use cases in blockchain tech, including secure smart contract execution, confidential transactions, privacy-preserving data analytics, secure oracles, decentralized identity systems, and more. 
-                       They protect sensitive data, ensure privacy and confidentiality, and enable secure authentication on the blockchain..
+                       They protect sensitive data, ensure privacy and confidentiality, and enable secure authentication on the blockchain.
                     </li>
                     <li>
                         <a href="https://mirror.xyz/0x14A74292E6399987cA02E40d323603B3F257D8a6/YhMqR1TBbdInJ23t_kaKGUDn_IX5jMjtFNnYa7XrUGQ"
@@ -183,6 +190,11 @@
                 <li>
                     <a href="https://twitter.com/erayajk/status/1659531392915496963">
                         <i>Aztec and Noir</i>
+                    </a>
+                </li> 
+                <li>
+                    <a href="https://twitter.com/erayajk/status/1673377658980433920">
+                        <i>Noir v0.7.1</i>
                     </a>
                 </li> 
             </ul>
