--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="mailto:erayackgoz@hotmail.com">email</a>
       </h1>
 
+
     </div>
 
     <div id = "intro">
@@ -123,6 +124,14 @@
                 <ul>
                     <li>
                         <a href="https://docs.google.com/document/d/1RdXXOgxmt6G3krUVZZN566FIbiOY3ht64XV-eSnmaCE/edit?usp=sharing">
+                            <i>Cyber Resilience in Finance (of Critical Infrastructures</i>
+                        </a>
+                        : "The report of the working group we conducted in partnership with EBRD and University of Cambridge has a partial version. 
+                        Additionally, a version including different critical infrastructures will be published as a book soon.
+            
+                    </li>
+                    <li>
+                        <a href="https://docs.google.com/document/d/1RdXXOgxmt6G3krUVZZN566FIbiOY3ht64XV-eSnmaCE/edit?usp=sharing">
                             <i>Aave v3 Report</i>
                         </a>
                         : Extensive report for Aave v4.
@@ -159,10 +168,14 @@
         <div id = "book">
             <h2>Book Contributions</h2>
             <ul>
-
                 <li>
                     <a href="https://books.google.com.tr/books?id=bN6dEAAAQBAJ&pg=PA99&source=gbs_toc_r&cad=3#v=onepage&q&f=false">
                         <i>Blockchain-Based Energy Management for Supply Chains</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.routledge.com/Cyber-Resilience-in-Critical-Infrastructure/Kufeoglu-Akgun/p/book/9781032583051">
+                        <i>Cyber Resilience in Critical Infrastructures</i>
                     </a>
                 </li>  
             </ul>
@@ -205,6 +218,7 @@
 
     <div id="footer">
         <p class = "footer"><i>This website was modified from
+            <a href="https://github.com/gakonst/gakonst.github.io"/>gakonst's fork</a> of the
             <a href="https://github.com/transmissions11/transmissions11.github.io"/>t11s' fork</a> of the
             <a href="https://github.com/dapphub/dapp-tools"/>dapptools</a> website</i></p>
       <br />
