--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div id = "intro">
         <p><b>
-            I am currently working as an independent researcher, MEV searcher, and consultant. Additionally, I am a Protocol Fellow at RIG (Robust Incentives Group) in the Ethereum Foundation. Prior to my current roles, I have worked at Faradai, EBRD and Cambridge.
+            I am currently working as an independent researcher, MEV searcher, and consultant. Additionally, I am participating in the Contributor Program at  EF <a href="https://github.com/privacy-scaling-explorations">PSE team</a>.
         </p></b>
 
         <ul>
@@ -41,8 +41,7 @@
         </li>
 
         <li>
-            Previously I was R&D Specialist of a Blockchain-based carbon tokenization protocol at Faradai.
-        </li>
+            Previously I was Protocol Fellow at RIG (Robust Incentives Group) in the Ethereum Foundation.
         <li>
             I participated in the cyber resilience and Blockchain working group at the EBRD and the University of Cambridge, where I serve as the team lead for the Finance, Telecom, and Government sectors. Within the finance section, my primary focus is on blockchain projects. 
             I explore the implementation of blockchain technology in the financial sector, assessing its potential benefits and risks.
@@ -71,7 +70,7 @@
                 <ul>
                     <li>
                         <a href=""
-                           ><i>Using SNARKs for Auction Design in DAO Treasuries<i></a
+                           ><i>Using SNARKs for Auction Design in DAO Treasuries (in progress)<i></a
                        >,:
                        
                         The article discusses transparency challenges in DAO treasuries and proposes solutions using SNARKs to enhance privacy and efficiency.
@@ -106,7 +105,7 @@
                          </i></a 
                        >
                         with Dr. Sinan Kufeoglu and Prof. Dr. Aaron Praktiknjo.
-                       This paper attempts to design the first decentralised energy Datahub ecosystem’s business ecosystem, with the name DenHub, using Blockchain. 
+                       This paper attempts to design the first decentralised energy Datahub ecosystem, with the name DenHub, using Blockchain. 
                        This model enables easy access to transparent and flexible energy data and new business models that will emerge upon its use.
                     </li>
 
@@ -123,10 +122,10 @@
             <div>
                 <ul>
                     <li>
-                        <a href="https://docs.google.com/document/d/1RdXXOgxmt6G3krUVZZN566FIbiOY3ht64XV-eSnmaCE/edit?usp=sharing">
-                            <i>Cyber Resilience in Finance (of Critical Infrastructures</i>
+                        <a href="https://docsend.com/view/vaixm8ka8ctawsdu">
+                            <i>Cyber Resilience in Finance (of Critical Infrastructures)</i>
                         </a>
-                        : "The report of the working group we conducted in partnership with EBRD and University of Cambridge has a partial version. 
+                        : The report is part of the research conducted by the working group with EBRD and the University of Cambridge.. 
                         Additionally, a version including different critical infrastructures will be published as a book soon.
             
                     </li>
@@ -134,7 +133,7 @@
                         <a href="https://docs.google.com/document/d/1RdXXOgxmt6G3krUVZZN566FIbiOY3ht64XV-eSnmaCE/edit?usp=sharing">
                             <i>Aave v3 Report</i>
                         </a>
-                        : Extensive report for Aave v4.
+                        : Extensive report for Aave v3.
                     </li>                    
                     <li>
                         <a href="https://docs.google.com/document/d/1s8eNcxrtlMv7NsMCAMNa6F-GiTFLKpqubPhotqO5ckU/edit?usp=sharing"
