--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div id = "intro">
         <p><b>
-            I am currently working as an independent researcher, MEV searcher, and consultant. Additionally, I am participating in the Contributor Program at  EF <a href="https://github.com/privacy-scaling-explorations">PSE team</a>.
+            I am currently working as an independent researcher, MEV searcher, and consultant. Additionally, I am participating in the Contributor Program at  Ethereum Foundation's<a href="https://github.com/privacy-scaling-explorations">PSE team</a>.
         </p></b>
 
         <ul>
