--- a/index.html
+++ b/index.html
@@ -183,7 +183,11 @@
         <div id = "thread">
             <h2>Twitter Threads</h2>
             <ul>
-
+                <li>
+                    <a href="https://twitter.com/erayajk/status/1660977098092101634">
+                        <i>the relationship between Restaking and Liquid Staking protocols</i>
+                    </a>
+                </li>
                 <li>
                     <a href="https://twitter.com/erayajk/status/1660977098092101634">
                         <i>MEV Burn</i>
