--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             <h2>Twitter Threads</h2>
             <ul>
                 <li>
-                    <a href="https://twitter.com/erayajk/status/1660977098092101634">
-                        <i>the relationship between Restaking and Liquid Staking protocols</i>
+                    <a href="https://twitter.com/erayajk/status/1679203565963821056">
+                        <i>The relationship between Restaking and Liquid Staking protocols</i>
                     </a>
                 </li>
                 <li>
