--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@
             <h2>Twitter Threads</h2>
             <ul>
                 <li>
+                    <a href="https://twitter.com/erayajk/status/1679565565889847296">
+                        <i>SUAVE's TEE-based smart contract programming and MEVM</i>
+                    </a>
+                </li>
+                <li>
                     <a href="https://twitter.com/erayajk/status/1679203565963821056">
                         <i>The relationship between Restaking and Liquid Staking protocols</i>
                     </a>
