--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/erayajk/status/1668385787191107584">
-                        <i>The Sting Framework and Flashbots' SGX Builder</i>
+                    <a href="https://twitter.com/erayajk/status/1682344761783377920">
+                        <i>OP Stack ZK and Reth</i>
                     </a>
                 </li>  
                 <li>
