--- a/index.html
+++ b/index.html
@@ -69,13 +69,6 @@
             <div>
                 <ul>
                     <li>
-                        <a href=""
-                           ><i>Using SNARKs for Auction Design in DAO Treasuries (in progress)<i></a
-                       >,:
-                       
-                        The article discusses transparency challenges in DAO treasuries and proposes solutions using SNARKs to enhance privacy and efficiency.
-                    </li>
-                    <li>
                         <a href="https://hackmd.io/XZX9_pZ8Q1aa_ySDPeQopg"
                            ><i>Understanding the Technical Aspects of Aztec and Noir<i></a
                        >,:
@@ -130,13 +123,13 @@
             
                     </li>
                     <li>
-                        <a href="https://docs.google.com/document/d/1RdXXOgxmt6G3krUVZZN566FIbiOY3ht64XV-eSnmaCE/edit?usp=sharing">
+                        <a href="https://docsend.com/view/sjhbbd8x73pe7bux">
                             <i>Aave v3 Report</i>
                         </a>
                         : Extensive report for Aave v3.
                     </li>                    
                     <li>
-                        <a href="https://docs.google.com/document/d/1s8eNcxrtlMv7NsMCAMNa6F-GiTFLKpqubPhotqO5ckU/edit?usp=sharing"
+                        <a href="https://docsend.com/view/95peai8qat69c3y8"
                            ><i>Sui vs Aptos Report</i></a
                        >: Aptos and Sui are two promising third generation blockchain projects. 
                 </ul>
@@ -232,3 +225,5 @@
       <br />
   </body>
 </html>
+
+
