Update personal bio on index.html

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
     </div>
 
     <div id = "intro">
-        <p><b>
-            I am currently working as an independent researcher, MEV searcher, and consultant. Additionally, I am participating in the Contributor Program at  Ethereum Foundation's <a href="https://github.com/privacy-scaling-explorations">PSE team</a>.
-        </p></b>
-
+        <p>
+            I am currently working as a Researcher at <a href="https://semiotic.ai/">Semiotic Labs</a>, where I am a core developer of <a href="https://thegraph.com/">The Graph Protocol</a>. Before that, I was MEV searcher and consultant and also participated in the Contributor Programs at Ethereum Foundation's <a href="https://efdn.notion.site/Robust-Incentives-Group-RIG-Homepage-802339956f2745a5964d8461c5ccef02">RIG team</a> and <a href="https://github.com/privacy-scaling-explorations">PSE team</a>.
         <ul>
         <li>
             My research interests are Mechanism design, Cryptoeconomic Security,
@@ -41,10 +39,10 @@
         </li>
 
         <li>
-            Previously I was Protocol Fellow at RIG (Robust Incentives Group) in the Ethereum Foundation.
+            In The Graph, we are working on bringing Verifiablity to The Graph ecosystem. A detailed <a href="https://hackmd.io/@severiano4/H1AXcOK2n">look</a> at what we are building.
         <li>
-            I participated in the cyber resilience and Blockchain working group at the EBRD and the University of Cambridge, where I serve as the team lead for the Finance, Telecom, and Government sectors. Within the finance section, my primary focus is on blockchain projects. 
-            I explore the implementation of blockchain technology in the financial sector, assessing its potential benefits and risks.
+            I participated in the cyber resilience and Blockchain working group at the EBRD and the University of Cambridge, where I served as the team lead for Finance. 
+            Within the finance section, my primary focus is on blockchain projects. I explore the implementation of blockchain technology in the financial sector, assessing its potential benefits and risks.
         </li>
         <li>
             Holds MSc in CS at NTNU
@@ -58,6 +56,28 @@
     </div>
 
     <hr>
+
+    <div id = "bio">
+        <h1>Codes</h1>
+        <div id = "writing">
+            <h2>Repos</h2>
+
+            <div>
+                <ul>
+                    <li>
+                        <a href="https://github.com/semiotic-ai/risc0-verifiabilty"
+                           ><i>Product Tree Queries<i></a
+                       >
+                    </li>
+                    <li>
+                        <a href="https://github.com/semiotic-ai/ovc"
+                           ><i>Optimistically Verifiable Commitments <i></a
+                       >
+                    </li>
+                </ul>
+            </div>
+        </div>
+
 
     <div id = "bio">
         <h1>Writings</h1>
