fix: code highlights

--- a/index.html
+++ b/index.html
@@ -57,26 +57,28 @@
 
     <hr>
 
-    <div id = "bio">
+    <div id="bio">
         <h1>Codes</h1>
-        <div id = "writing">
+        <div id="writing">
             <h2>Repos</h2>
-
+    
             <div>
                 <ul>
                     <li>
-                        <a href="https://github.com/semiotic-ai/risc0-verifiabilty"
-                           ><i>Product Tree Queries<i></a
-                       >
+                        <a href="https://github.com/semiotic-ai/risc0-verifiabilty">
+                            <code>Product Tree Queries</code>
+                        </a>
                     </li>
                     <li>
-                        <a href="https://github.com/semiotic-ai/ovc"
-                           ><i>Optimistically Verifiable Commitments <i></a
-                       >
+                        <a href="https://github.com/semiotic-ai/ovc">
+                            <code>Optimistically Verifiable Commitments</code>
+                        </a>
                     </li>
                 </ul>
             </div>
         </div>
+    </div>
+    
 
 
     <div id = "bio">
