--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
             <div>
                 <ul>
                     <li>
+                        <a href="https://ethresear.ch/t/using-the-graph-to-preserve-historical-data-and-enable-eip-4444/17318"
+                           ><i>Using The Graph to Preserve Historical Data and Enable EIP-4444<i></a
+                       >,:
+                       The Graph naturally enables and incentivizes a unique EIP-4444 solution. The flat files generated and used by Indexers can also serve as a shareable and verifiable data source for other dApps and services that require historical blockchain data.
+                    </li>
+                    <li>
                         <a href="https://hackmd.io/XZX9_pZ8Q1aa_ySDPeQopg"
                            ><i>Understanding the Technical Aspects of Aztec and Noir<i></a
                        >,:
