--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
             <div>
                 <ul>
                     <li>
+                        <a href="https://github.com/semiotic-ai/flat-files-decoder">
+                            <code>Flat Files Decoder</code>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://github.com/semiotic-ai/risc0-verifiabilty">
                             <code>Product Tree Queries</code>
                         </a>
