--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div id = "intro">
         <p><b>
-            I am currently working as a Researcher at <a href="https://semiotic.ai/">Semiotic Labs</a>, where I am a core developer of <a href="https://thegraph.com/">The Graph Protocol</a>. Before that, I was MEV searcher and consultant and also participated in the Contributor Programs at Ethereum Foundation's <a href="https://efdn.notion.site/Robust-Incentives-Group-RIG-Homepage-802339956f2745a5964d8461c5ccef02">RIG team</a> and <a href="https://github.com/privacy-scaling-explorations">PSE team</a>.
+            I am currently working as a Research Engineer at <a href="https://semiotic.ai/">Semiotic Labs</a>, where I am a core developer of <a href="https://thegraph.com/">The Graph Protocol</a>. Before that, I was MEV searcher and consultant and also participated in the Contributor Programs at Ethereum Foundation's <a href="https://efdn.notion.site/Robust-Incentives-Group-RIG-Homepage-802339956f2745a5964d8461c5ccef02">RIG team</a> and <a href="https://github.com/privacy-scaling-explorations">PSE team</a>.
         <ul></b>
         <li>
             My research interests are Mechanism design, Cryptoeconomic Security,
