--- a/_pages/5_resume.html
+++ b/_pages/5_resume.html
@@ -1,44 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" width="device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="Mark Qi">
-	<!-- favicon -->
-	<link rel="shortcut icon" type="image/x-icon" href="/assets/menu-favicon.ico"/>
-	
-	<title>Resume | Eray Ack</title>		
-	<!-- styles -->
-	<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+---
+layout: default
+title: Resume
+permalink: /resume/
+---
 
-	<!-- google analytics - i will not share this data with google -->
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src=""></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-154465690-1');
-</script>
-	
-</head><body><header class="site-header">
-  <div class="wrapper"><nav class="site-nav">
-      <div class="trigger"><a class="page-link" href="/">
-          Home
-        </a><a class="page-link" href="/projects/">
-          Projects
-        </a><a class="page-link" href="/blog/">
-          Writings
-        </a><a class="page-link" href="/cv/">
-          Resume
-        </a></div>
-    </nav></div>
-</header>
-<main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        <div class="cv">
+<div class="cv">
   <!--
   <a
     href="https://github.com/chiapet92/resume/raw/master/QI_MARK_RESUME.pdf"
@@ -122,19 +88,3 @@
   </div>
 </div>
 
-
-      </div>
-    </main><footer>
-	<div style="display: flex; justify-content: space-between; align-items: center;">
-	  <p>By <a href="/">Eray</a></p>
-	  <div style="display: flex; align-items: center;">
-		<a href="https://x.com/erayajk" style="margin-right: 10px;">X</a>
-		<a href="https://www.github.com/erayack/" style="margin-right: 10px;">Github</a>
-		<a href="https://www.linkedin.com/in/erayack/" style="margin-right: 10px;">LinkedIn</a>
-		<a href="mailto:erayackgoz@hotmail.com">Mail</a>
-	  </div>
-	</div>
-  </footer>
-  </body>
-
-</html>
