--- a/_pages/4_blog.html
+++ b/_pages/4_blog.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Writings
+title: Blog
 permalink: /blog/
 ---
 
-<h1>Thoughts</h1>
+<h1>Writings</h1>
 
 <ul class="posts">
 
