--- a/_pages/2_projects.html
+++ b/_pages/2_projects.html
@@ -49,6 +49,14 @@ permalink: /projects/
         </h2>
         <p>Ensuring no data is skipped in verifiable queries.</p>
       </div>
+
+      <div class="project">
+        <h2>
+          <a href="https://github.com/erayack/awesome-sgx-blockchain">Awesome SGX</a>
+        </h2>
+        <p>Awesome SGX and TEE on Blockchain Resources</p>
+      </div>
+
     </div>
     <!--// .yui-u -->
   </div>
