--- a/_pages/5_resume.html
+++ b/_pages/5_resume.html
@@ -67,14 +67,31 @@ permalink: /resume/
       <h3>
         <em>Department of Computer Science, Master’s Degree</em>
       </h3>
-      <h4>Contribution: High-Performance Asynchronous Byzantine Fault Tolerance Consensus Protocol
-      </h4>
+      <ul>
+        <li>
+          Contribution:
+          <a href="https://ieeexplore.ieee.org/document/9680468">High-Performance Asynchronous Byzantine Fault Tolerance Consensus Protocol</a>
+        </li>
+        <li>
+          Project: 
+          <a href= "https://www.ntnu.edu/paasforchain">PaasforChain</a>
+        </li>
+        <!-- Add more list items for additional contributions and projects -->
+      </ul>
     </div>
+
     <div class="yui-u">
       <h2>Istanbul Technical University</h2>
       <h3>
         <em>Systems Engineering and Operation Research, Bachelor of Science</em>
       </h3>
+      <ul>
+        <li>
+          Thesis:
+          <a href="https://books.google.com.tr/books?id=bN6dEAAAQBAJ&pg=PA99&source=gbs_toc_r&cad=3#v=onepage&q&f=false">Simulation and analysis of P2P architectures in microgrids</a>
+        </li>
+        <!-- Add more list items for additional contributions and projects -->
+      </ul>      
     </div>
   </div>
   <!--// .yui-gf -->
