--- a/_pages/4_blog.html
+++ b/_pages/4_blog.html
@@ -21,6 +21,8 @@ permalink: /blog/
     <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="https://www.mdpi.com/1996-1073/15/2/650" title="{{ post.title }}">{{ post.title }}</a></li>
     {% elsif post.url contains 'mev-boost' %}
     <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="https://mirror.xyz/0x14A74292E6399987cA02E40d323603B3F257D8a6/7IlU9YwUUmWrS74BU4O0mb9i58vCkxXEDZk2EDRuqZM" title="{{ post.title }}">{{ post.title }}</a></li>
+    {% elsif post.url contains 'binius' %}
+    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="https://www.linkedin.com/posts/erayack_succinct-arguments-over-towers-of-binary-activity-7153039637358227456-BYZd/" title="{{ post.title }}">{{ post.title }}</a></li>
     {% else %}
     <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
   {% endif %}
