--- a/_pages/5_resume.html
+++ b/_pages/5_resume.html
@@ -37,11 +37,10 @@ permalink: /resume/
 
       <div class="job">
         <h2>Primev  <span class="duration">Nov 2023 - Feb 2023</span></h2>
-        <h3><em>Senior Research Engineer</em></h3>
+        <h3><em> Research Collaborator</em></h3>
         <ul>
             <li> Contributed the mev-commit to facilitate exchange of execution bids and credible commitments between MEV actors.</li>
             <li> Pioneered solutions in preconfirmations, inclusion lists, hooks, CR and other MEV primitives for mev-commit.</li>
-            <li> Worked closely with CEO to set strategic research priorities and engineering initiatives as research engineer/architect.</li>
           </ul>
       </div>
 
