--- a/_pages/2_projects.html
+++ b/_pages/2_projects.html
@@ -10,13 +10,13 @@ permalink: /projects/
     <div class="yui-u">
       <div class="project">
         <h2>
-          <a href="https://github.com/semiotic-ai/era-file-sink">Distributed Systems Codes & Notes</a>
+          <a href="https://erayack.github.io/distributed-systems-notes">Distributed Systems Codes & Notes</a>
         </h2>
-        <p>EDistributed Systems Codes & Notes</p>
+        <p>Distributed Systems Codes & Notes</p>
       </div>
       <div class="project">
         <h2>
-          <a href="https://erayack.github.io/distributed-systems-notes">Era1 File Substreams</a>
+          <a href="https://github.com/semiotic-ai/era_file_substream">Era1 File Substreams</a>
         </h2>
         <p>Era1 Files Substreams</p>
       </div>
