--- a/_pages/1_home.html
+++ b/_pages/1_home.html
@@ -7,7 +7,7 @@ permalink: /
 <div class="blurb">
   <h1 class="title mb-6">Hi, I'm Eray!</h1>
 		<p class="mb-4">
-			I am currently working as a Research Engineer at <a
+			I currently working as a Research Engineer at <a
 				href="https://semiotic.ai/"
 				style="color:#FF7E69">Semiotic Labs</a
 			> where I am a core developer of <a href="https://thegraph.com/" style="color:#FF7E69"
