--- a/_pages/5_resume.html
+++ b/_pages/5_resume.html
@@ -24,7 +24,7 @@ permalink: /resume/
     <div class="yui-u">
       <div class="job">
         <h2>Semiotic Labs / The Graph
-          <span class="duration">June 2023 - Current</span>
+          <span class="duration">June 2023 - June 2024</span>
         </h2>
         <h3><em>Research Engineer</em></h3>
         <ul>
