--- a/_pages/1_home.html
+++ b/_pages/1_home.html
@@ -6,13 +6,17 @@ permalink: /
 
 <div class="blurb">
   <h1 class="title mb-6">Hi, I'm Eray!</h1>
-		<p class="mb-4">
-			I currently working as a Research Engineer at <a
+<p class="mb-4">
+		I'm currently <a href="https://uniswapfoundation.mirror.xyz/-_H_7xF5GrN6n49KEiiuqXNf-X6BDlZFp9mocOnVjnw"style="color:#FF7E69">participating</a> 
+		in the Uniswap Foundation's Hook Incubation Program. Additionally, I'm co-authoring an article that I believe offers a novel contribution at the intersection of <a style="color:#FF7E69">crypto, tech, and policy</a>. I expect it to be published soon in one of the top journals in the field.
+	</p>
+			<p class="mb-4">
+			Most recently, I worked as a Research Engineer at <a
 				href="https://semiotic.ai/"
 				style="color:#FF7E69">Semiotic Labs</a
-			> where I am a core developer of <a href="https://thegraph.com/" style="color:#FF7E69"
+			> where I was a core developer of <a href="https://thegraph.com/" style="color:#FF7E69"
 				>The Graph Protocol</a
-			>. Before that, I was an MEV searcher and consultant and also participated in the Contributor
+			>. Before that, I was an MEV searcher, consultant and also participated in the Fellowship
 			Programs at Ethereum Foundation's <a
 				href="https://efdn.notion.site/Robust-Incentives-Group-RIG-Homepage-802339956f2745a5964d8461c5ccef02"
 				style="color:#FF7E69">RIG team</a
@@ -22,21 +26,21 @@ permalink: /
 			<ul class="list-inside list-disc">
 				<li>
 					My research interests are Mechanism design, Cryptoeconomic Security, MEV, Proof of Stake,
-					Zero Knowledge, and SGX.
+					and Distributed Systems.
 				</li>
 				<li>
-					In The Graph, we are working on bringing Verifiability to The Graph ecosystem. A detailed <a
+					In The Graph, we worked on bringing Verifiability to The Graph ecosystem. A detailed <a
 						href="https://hackmd.io/@severiano4/H1AXcOK2n" style="color:#FF7E69" >look</a
-					> at what we are building.
+					> at what we built.
 				</li>
 				<li>
 					I participated in the cyber resilience and Blockchain working group at the EBRD and the
 					University of Cambridge, where I served as the team lead for Finance. Within the finance
-					section, my primary focus is on blockchain projects. I explore the implementation of
+					section, my primary focus is on blockchain projects. I explored the implementation of
 					blockchain technology in the financial sector, assessing its potential benefits and risks.
 				</li>
 				<li>
-					Holds an MSc in CS at NTNU <a href="https://www.ntnu.edu/paasforchain"style="color:#FF7E69">Blockchain Lab</a> and
+					Dropped out of an MSc in CS at NTNU's <a href="https://www.ntnu.edu/paasforchain"style="color:#FF7E69">Blockchain Lab</a> and holds
 					a BSc in Systems Engineering.
 				</li>
 			</ul>
