--- a/_pages/5_resume.html
+++ b/_pages/5_resume.html
@@ -97,6 +97,7 @@ permalink: /resume/
   <div class="yui-u first">
     <h2>Honors, Awards & Grants</h2>
     <ul>
+      <li><a href="https://bouncy-print-988.notion.site/Eray-c56096c861994330a5eba793b9c262ca">Uniswap Foundation Hook Incubation Cohort 3</a></li>
       <li>Axiom ZK Intensive Cohort 2</li>
       <li>Fenbushi Capital Research Fellow</li>
       <li>Blockcircus, Turkey’s first Blockchain Hackathon Winner & Special Award Winner</li>
